# FastAPI_Project_Starter

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml
fastapi_generator/: __init__.py  cli.py
fastapi_generator/commands/: __init__.py  new.py
fastapi_generator/core/: config.py  post_deployment_setup.py  templates.py  utils.py
fastapi_generator/templates/: fastgen_render.py
fastapi_generator/templates/async/: async_db.py.jinja
fastapi_generator/templates/base/: .env.jinja  database.py.jinja  loguru.py.jinja  main.py.jinja
fastapi_generator/templates/celery/: email_base.py.jinja  tasks.py.jinja
fastapi_generator/templates/docker/: docker-compose.yml.jinja
fastapi_generator/templates/middlewares/: __init__.py.jinja  error_handling.py.jinja  middleware_config.py.jinja  request_id.py.jinja  setup.py.jinja  timer.py.jinja
fastapi_generator/templates/sync/: sync_db.py.jinja
fastapi_generator/templates/template/: password_reset.html  password_reset.txt  welcome.txt
fastgen/: cli.py
fastgen/commands/: new.py
fastgen/core/: config.py  templates.py  utils.py
fastgen/templates/: Makefile.jinja  fastgen_render.py
fastgen/templates/async/: async_db.py.jinja
fastgen/templates/base/: .env.jinja  .gitignore.jinja  api_v1__init__.py.jinja  config.py.jinja  database.py.jinja  loguru.py.jinja  main.py.jinja  pyproject.toml.jinja  requirements.txt.jinja
fastgen/templates/celery/: celery_app.py.jinja  config.py.jinja  email_base.py.jinja  tasks.py.jinja
fastgen/templates/docker/: docker-compose.yml.jinja
(+15 files in other folders)
