[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastgen"
version = "0.1.0"
description = "A FastAPI project generator CLI tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "rich>=12.0.0",
]

[project.scripts]
fastgen = "fastgen.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastgen*"]

[tool.setuptools.package-data]
fastgen = ["templates/**/*"]